# larg4

./: CMakeLists.txt  CMakePresets.json
cmakeConfig/: CMakeLists.txt  larg4-fragment.cmake.in
fcl/: CMakeLists.txt  LArG4.fcl  crystal.fcl  crystalcal.fcl  crystalcal_killer.fcl  dummyServiceTest.fcl  eic_calo.fcl  evgen.fcl  franz542_Biinclxx.fcl  lArBox.fcl  lArDet.fcl  multigen.fcl  mytestHepevt.fcl  mytestPG.fcl  mytestPGemu.fcl  mytestPGemuvis.fcl  mytest_vis.fcl  simplemerge.fcl  singleCrystal.fcl  test2.fcl  test23.fcl  testlarg4.fcl  testmctruth.fcl
gdml/: Bi_target.gdml  CMakeLists.txt  SimpleExtension.xsd  be_target.gdml  c_target.gdml  crystalcal_PbF2.gdml  crystalcal_pbwo.gdml  cu_target.gdml  eic_CrystalCal_PbF2.gdml  lArDet.gdml  lArDet_split.gdml  lariat.gdml  lartub6_dr.gdml  lartub6_tr.gdml  materials.xml  pb_target.gdml  singlecrystal_PbF2.gdml  singlecrystal_color__PbF2.gdml  ta_target.gdml  tiledsamplingcal4mmpb1mmSz.gdml  tinylArBox_color.gdml
larg4/: CMakeLists.txt
larg4/Analysis/: CMakeLists.txt  CheckAuxDetHit_module.cc  CheckAuxDetHit_module.h  CheckMCParticle_module.cc  CheckMCParticle_module.h  CheckSimEnergyDepositHit_module.cc  CheckSimEnergyDepositHit_module.h  CheckSimEnergyDepositHit_module.hh  CheckSimEnergyDeposit_module.cc  CheckSimEnergyDeposit_module.h
larg4/Core/: CMakeLists.txt  G4InfoReducer_module.cc  SimpleMerge_module.cc  g4inforeducer.fcl  larg4Main_module.cc  larg4SingleGen_module.cc
larg4/SensitiveDetectors/: CMakeLists.txt  SimEnergyDepositSD.cc  SimEnergyDepositSD.h
larg4/Services/: AuxDetSD.cc  AuxDetSD.h  CMakeLists.txt  LArG4Detector.cc  LArG4Detector_service.cc  LArG4Detector_service.h  LArPhotonSD.cc  LArPhotonSD.h  SimEnergyDepositSD.cc  SimEnergyDepositSD.h  TempHit.h  larg4ActionHolder_service.cc  larg4ActionHolder_service.h
larg4/SimEnergyDeposit/: CMakeLists.txt  GDMLDetector_service.cc  GDMLDetector_service.hh  SimEnergyDepositHit.h  SimEnergyDepositHit.hh  SimEnergyDepositSD.cc  SimEnergyDepositSD.h  SimEnergyDepositSD.hh  classes.h  classes_def.xml
larg4/actionBase/: CMakeLists.txt  ParticleListActionBase.cc  ParticleListActionBase.h
larg4/geantInit/: CMakeLists.txt  larg4RunManager.h
larg4/pluginActions/: CMakeLists.txt  MCTruthEventAction.cc  MCTruthEventAction_service.cc  MCTruthEventAction_service.h  ParticleListAction.cc  ParticleListAction_service.cc  ParticleListAction_service.cxx  ParticleListAction_service.h  thePositionInVolumeFilter.h
macros/: CMakeLists.txt
test/: CMakeLists.txt
test/LArTPCSingleParticle/: CMakeLists.txt  test_singleparticlelarg4.fcl
ups/: CMakeLists.txt  product_deps  setup_for_development
